--- a/views/author_list.pug
+++ b/views/author_list.pug
@@ -8,7 +8,7 @@ block content
       each author in author_list
         li
           a(href=author.url) #{author.name}
-          |  (#{author.formated_date_of_birth} - #{author.formated_date_of_death})
+          |  (#{author.lifespan})
           
   else
     p There are no authors.
