--- a/views/author_detail.pug
+++ b/views/author_detail.pug
@@ -19,3 +19,6 @@ block content
   hr
   p
     a(href=author.url+'/delete') Delete author
+  hr
+  p
+    a(href=author.url+'/update') Update author
