--- a/views/author_form.pug
+++ b/views/author_form.pug
@@ -6,13 +6,17 @@ block content
   form(method='POST')
     div.form-group
       label(for='first_name') First Name:
-      input#first_name.form-control(type='text', placeholder='First name (Christian)' name='first_name' required value=(undefined===author ? '' : author.first_name) )
+      input#first_name.form-control(type='text', name='first_name' required value=(author ? author.first_name : '') )
+      
       label(for='family_name') Family Name:
-      input#family_name.form-control(type='text', placeholder='Family name (Surname)' name='family_name' required value=(undefined===author ? '' : author.family_name))
+      input#family_name.form-control(type='text', name='family_name' required value=(author ? author.family_name : ''))
+
     div.form-group
       label(for='date_of_birth') Date of birth:
-      input#date_of_birth.form-control(type='date' name='date_of_birth' value=(undefined===author ? '' : author.date_of_birth) )
+      input#date_of_birth.form-control(type='date' name='date_of_birth' value=(author && author.date_of_birth ? author.date_of_birth.toISOString().split('T')[0] : '') )
 
+      label(for='date_of_death') Date of death:
+      input#date_of_death.form-control(type='date' name='date_of_death' value=(author && author.date_of_death ? author.date_of_death.toISOString().split('T')[0] : '') )
 
     button.btn.btn-primary(type='submit') Submit
 
@@ -20,3 +24,4 @@ block content
     ul
       for error in errors
         li!= error.msg
+        
