--- a/views/bookinstance_detail.pug
+++ b/views/bookinstance_detail.pug
@@ -18,3 +18,7 @@ block content
 
   if bookinstance.status!='Available'
     p #[strong Due back:] #{bookinstance.due_back_formatted}
+  p
+    a(href=bookinstance.url+'/delete') Delete this copy
+  p
+    a(href=bookinstance.url+'/update') Update this copy
