--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -15,3 +15,7 @@ block content
           dd #{book.summary}
     else
       p This genre has no books.
+    hr
+    a(href=genre.url + "/delete") Delete Genre
+    hr
+    a(href=genre.url + "/update") Edit Genre
